--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html> 
-<html> 
-<head> 
-<title>Welcome to My GitHub Portfolio</title> 
-</head> 
-<body> 
-<h1>Welcome to My Portfolio</h1> 
-<p>This is my personal portfolio showcasing my work.</p> 
-</body> 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Welcome to My GitHub Portfolio</title>
+</head>
+<body>
+    <h1>Welcome to My Portfolio</h1>
+    <p>This is my personal portfolio showcasing my work.</p>
+    <h2>About Me</h2>
+    <p>Hi, I'm Eric Wright, a passionate IT professional with experience in cybersecurity and IT support.</p>
+    <h2>Repositories</h2>
+    <ul>
+        <li><a href="https://github.com/ericwright68/resume">Resume Repository</a></li>
+        <li><a href="https://github.com/ericwright68/321-database-">Database</a></li>
+        <li><a href="https://github.com/ericwright68/206-Web-Applications">Web Applications</a></li>
+    </ul>
+    <h2>Contact Information</h2>
+    <p>Email: ericwright6816@gmail.com</p>
+    <h2>Resume</h2>
+    <p><a href="https://github.com/ericwright68/Resume/blob/main/Eric%20Wright%20Updated%20Resume-1%20copy%20(1).docx">Download my resume</a></p>
+</body>
 </html>
